Fix draft text overflow

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -150,6 +150,11 @@ blockquote {
     hyphens: auto;
 }
 
+blockquote.draftBlockquote {
+    max-height: none;
+    overflow-y: none;
+}
+
 blockquote.expand {
     max-height: none;
 }
